<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    android:paddingBottom="35dp"
    android:orientation="vertical"
    tools:context="kukila.backindapps.Activity.Register">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <kukila.backindapps.Layout.BackindMontserratMedium
                android:id="@+id/backindMontserratBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/daftarakun"
                android:textColor="@color/colorHitam"
                android:textSize="30dp" />

            <kukila.backindapps.Layout.BackindMontserratRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namalengkap"/>

            <kukila.backindapps.Layout.EditTexteBackindRegular
                android:id="@+id/nama_lengkap"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <kukila.backindapps.Layout.BackindMontserratRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"/>

            <kukila.backindapps.Layout.EditTexteBackindRegular
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <kukila.backindapps.Layout.BackindMontserratRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jeniskelamin"/>

            <Spinner
                android:id="@+id/jenis_kelamin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">
            </Spinner>

            <kukila.backindapps.Layout.BackindMontserratRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <kukila.backindapps.Layout.EditTexteBackindRegular
                android:id="@+id/username"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <kukila.backindapps.Layout.BackindMontserratRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <kukila.backindapps.Layout.EditTexteBackindRegular
                android:id="@+id/password"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <kukila.backindapps.Layout.BackindButtonMedium
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin20"
                android:background="@drawable/button_background"
                android:text="@string/daftar_sekarang"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <kukila.backindapps.Layout.BackindMontserratRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:text="@string/sudahpunya"
                    android:textAlignment="center"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <kukila.backindapps.Layout.BackindMontserratMedium
                    android:id="@+id/daftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/action_sign_in"
                    android:textAlignment="inherit"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
