<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/activity_login"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="35dp"
    android:background="@color/colorWhite"
    tools:context="kukila.backindapps.Activity.Login">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <kukila.backindapps.Layout.BackindMontserratMedium
                android:id="@+id/backindMontserratBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorHitam"
                android:textSize="30dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="60dp">
                <kukila.backindapps.Layout.BackindMontserratRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="14dp"
                    android:textColor="@color/colorHitam"/>
                <kukila.backindapps.Layout.BackindMontserratMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/backpacker"
                    android:textSize="14dp"
                    android:textColor="@color/colorHitam"/>
            </LinearLayout>


            <kukila.backindapps.Layout.BackindMontserratRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <kukila.backindapps.Layout.EditTexteBackindRegular
                android:id="@+id/username"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <kukila.backindapps.Layout.BackindMontserratRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <kukila.backindapps.Layout.EditTexteBackindRegular
                android:id="@+id/password"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <kukila.backindapps.Layout.BackindMontserratMedium
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/lupasandi"
                android:textColor="@color/colorPrimary"/>

            <kukila.backindapps.Layout.BackindButtonMedium
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin20"
                android:background="@drawable/button_background"
                android:text="@string/action_sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <kukila.backindapps.Layout.BackindMontserratRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/belumpunya"
                    android:textAlignment="center"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <kukila.backindapps.Layout.BackindMontserratMedium
                    android:id="@+id/daftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/daftarakun"
                    android:textAlignment="inherit"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
