<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kukila.backindapps.Activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/regis_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/Registrasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <kukila.backindapps.Layout.BackindMontserratBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="REGISTER"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin20"
                android:textAlignment="center"
                android:textSize="25dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="160dp"
                    android:layout_marginTop="@dimen/margin20"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content">

                    <kukila.backindapps.Layout.AutoCompleteBackindLight
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nama_depan"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="160dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="@dimen/margin20"
                    android:layout_height="wrap_content">

                    <kukila.backindapps.Layout.AutoCompleteBackindLight
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nama_belakang"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <kukila.backindapps.Layout.AutoCompleteBackindLight
                    android:id="@+id/username"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <kukila.backindapps.Layout.EditTexteBackindLight
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/margin20"
                android:layout_height="wrap_content">

                <kukila.backindapps.Layout.EditTexteBackindLight
                    android:id="@+id/ulang_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ulangi_kata_sandi"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <kukila.backindapps.Layout.BackindButtonBold
                android:id="@+id/daftar_akun"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:textColor="@android:color/white"
                android:text="@string/daftar"
                android:layout_marginBottom="@dimen/margin20"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <kukila.backindapps.Layout.BackindMontserratLight
                    android:layout_marginTop="5dp"
                    android:layout_width="180dp"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_height="wrap_content"
                    android:text="@string/sudah_punya_akun"
                    />
                <kukila.backindapps.Layout.BackindMontserratLight
                    android:layout_marginTop="5dp"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textAlignment="inherit"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/masuk" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
